Added Resource to the list of cluster objects to sync
